# hodge-consensus

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs
memory/: JOURNAL.md
src/: consensus.rs  decomposition.rs  error.rs  flow.rs  graph.rs  harmonic.rs  lib.rs  prediction.rs  ranking.rs
