[package]
name = "hodge-consensus"
version = "0.1.0"
edition = "2021"
description = "Hodge decomposition for agent disagreement resolution — predict which disputes resolve"
license = "MIT"
repository = "https://github.com/SuperInstance/hodge-consensus"
keywords = ["hodge", "consensus", "decomposition", "disagreement", "ranking"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
